--- a/css/style.css
+++ b/css/style.css
@@ -13,40 +13,109 @@
     -o-background-size: cover;
 }
 
-
 .products {
     height: 100%;
-    background-color: #e1eff2;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
+    background: rgb(182,213,234);
+    background: linear-gradient(90deg, rgba(182,213,234,1) 2%, rgba(156,201,232,1) 24%, rgba(221,236,243,1) 49%);
+    padding: 2rem;
+    overflow: auto;
 }
 
+.contact {
+    height: 100%;
+    background: rgb(182,213,234);
+    background: linear-gradient(90deg, rgba(182,213,234,1) 2%, rgba(156,201,232,1) 24%, rgba(221,236,243,1) 49%);
+    padding: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.info {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 19rem;
+    margin-left: 3rem;
+}
+
+.map-image {
+    width: 600px;
+    height: 400px;
+    border: 1px solid black;
+    object-fit: cover;
+    display: block;
+    background-color: #eee;
+    text-align: center;
+    margin-left: 5rem;
+    margin-top: 14rem;
+    margin-bottom: 5rem;
+}
+
+.kuva-container {
+  width: 600px;
+  height: 300px;
+  border: 1px solid black;
+  background-color: #eee;
+  text-align: center; /
+}
+
+.kuva-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  margin: auto;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 5rem;
+}
+
+.productscontainer {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 0.01rem;
+}
+
+.product-box {
+  box-sizing: border-box;
+  width: 17rem;
+  padding: 10px;
+  margin-left: 10px;
+  border: 1px solid black;
+  background-color: #E1EEF7;
+}
+
+.product-box img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.product-box h5 {
+  margin-top: 0;
+}
+
+.product-box button {
+  margin-top: 10px;
+}
+
+
 header {
-    background-color: cadetblue;
 }
 
 body {
   font-family: Verdana, sans-serif;
   margin: 0;
   padding: 0;
+  overflow: scroll;
 }
-
 
 body, html {
   height: 100%;
-  overflow: hidden;
-}
-
-
-nav {
-    background-color: #303633;
-    height: 52px;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 9999;
 }
 
 
@@ -56,7 +125,10 @@ main {
     left: 0;
     right: 0;
     z-index: 9999;
+    display: flex;
+    flex-wrap: wrap;
 }
+
 
 
 h1 {
@@ -79,15 +151,17 @@ h4 {
     font-size: 2.5rem;
 }
 
+h5 {
+    color: #333333;
+    font-size: 1.7rem;
+}
+
 section {
     background-color: transparent;
     margin-top: 50px;
     padding: 20px;
 }
 
-article {
-    background-color: transparent;
-}
 
 aside {
     background-color: transparent;
@@ -99,6 +173,17 @@ form {
     margin-left: 30px;
 }
 
+nav {
+    background-color: #303633;
+    height: 52px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+}
+
 nav ul {
     list-style: none;
     margin: 0;
@@ -106,7 +191,8 @@ nav ul {
 }
 
 nav li {
-    display: inline-block;
+    display: inline-flex;
+    flex-wrap: wrap;
 }
 
 nav a {
@@ -114,10 +200,12 @@ nav a {
     display: block;
     padding: 10px;
     text-decoration: none;
+    margin-left: 40px;
 }
 
 nav li.right {
     float: right;
+    margin-right: 40px;
 }
 
 
@@ -195,7 +283,83 @@ input[type="email"] {
     margin-left: 30px;
 }
 
-@media only screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
+    .kuva-container {
+        width: 100%;
+        height: auto;
+    }
+
+    .kuva-container img {
+        width: 100%;
+        height: auto;
+    }
+
+    .info {
+        margin-top: 5rem;
+        margin-left: 0.5rem;
+    }
+
+    .map-image {
+        width: 100%;
+        height: auto;
+        margin-left: 10px;
+        margin-top: 20px;
+    }
+
+    nav {
+        background-color: #303633;
+        height: 52px;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 9999;
+    }
+
+    nav ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    nav li {
+        display: inline-block;
+        margin: 0;
+        text-align: center;
+    }
+
+    nav li:nth-child(1) {
+        display: none;
+    }
+
+    nav a {
+        color: #8BE8CB;
+        display: block;
+        padding: 15px 10px;
+        text-decoration: none;
+        touch-action: manipulation;
+    }
+
+    nav li.right {
+        float: none;
+        margin-right: 0;
+    }
+
+    nav li.left {
+        float: none;
+        margin-left: 0;
+    }
+
+    nav li:nth-child(2) {
+        margin-right: auto;
+        margin-left: 10px;
+    }
+
     footer {
         background-size: cover;
         padding: 10px;
@@ -270,6 +434,9 @@ input[type="email"] {
         margin-left: 30px;
     }
 }
+
+
+
 
 
 
