--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-.container {
-    width: 80%;
-    margin: auto;
-    box-sizing: border-box;
-}
-
 .home {
     height: 100%;
     background-size: 100% auto;
@@ -31,10 +25,7 @@
 }
 
 .info {
-    display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
-    align-items: center;
     margin-top: 19rem;
     margin-left: 3rem;
 }
@@ -294,17 +285,6 @@ input[type="email"] {
         height: auto;
     }
 
-    .info {
-        margin-top: 5rem;
-        margin-left: 0.5rem;
-    }
-
-    .map-image {
-        width: 100%;
-        height: auto;
-        margin-left: 10px;
-        margin-top: 20px;
-    }
 
     nav {
         background-color: #303633;
@@ -320,7 +300,7 @@ input[type="email"] {
     nav ul {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         height: 100%;
         margin: 0;
@@ -340,9 +320,10 @@ input[type="email"] {
     nav a {
         color: #8BE8CB;
         display: block;
-        padding: 15px 10px;
+        padding: 15px 20px;
         text-decoration: none;
         touch-action: manipulation;
+        cursor: pointer;
     }
 
     nav li.right {
@@ -432,6 +413,19 @@ input[type="email"] {
     .subscribe-heading {
         margin-right: 0;
         margin-left: 30px;
+    }
+
+    .info {
+        margin-top: 5rem;
+        margin-left: 0;
+        margin-bottom: -30rem;
+    }
+
+    .map-image {
+        width: 20rem;
+        height: 15rem;
+        margin-left: 0;
+        margin-top: 10px;
     }
 }
 
