--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,8 @@
 }
 
 .product-box button {
-  margin-top: 10px;
+  margin-top: 0.8rem;
+  margin-bottom: 2rem;
 }
 
 
@@ -107,6 +108,8 @@ body {
 
 body, html {
   height: 100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 
