--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .home {
     height: 100%;
     background-size: 100% auto;
-    background: url("../css/taustakuva.jpg") no-repeat fixed center center;
+    background: url("../img/taustakuva.jpg") no-repeat fixed center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
