--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@
   width: 17rem;
   padding: 10px;
   margin-left: 2rem;
+  margin-top: 3rem;
   border: 1px solid black;
   background-color: #E1EEF7;
 }
